# Todo-In-Memory-Python-Console-App

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/agents/: architecture-planner.md  constitution-guardian.md  implementation-engineer.md  spec-author.md  task-decomposer.md
.specify/memory/: constitution.md
history/prompts/001-todo-app/: 001-create-todo-app-specification.spec.prompt.md  002-create-implementation-plan.plan.prompt.md  003-generate-implementation-tasks.tasks.prompt.md  004-implement-todo-console-app.green.prompt.md
history/prompts/constitution/: 001-initialize-todo-app-constitution.constitution.prompt.md
specs/001-todo-app/: plan.md  spec.md  tasks.md
specs/001-todo-app/checklists/: requirements.md
src/todo/: __init__.py  __main__.py  cli.py  commands.py  models.py  storage.py
